# dune

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  LICENCE.md  Makefile  README.md  SPONSORS.md  cmake_install.cmake  dune-gsmux  dune-gsmux-tsv  dune-lsf2jpg  dune-lsfreplay  dune-lucb  dune-sendmsg  dune-uctk  dune-wgs84
.github/workflows/: linux.yml
cmake/: Architecture.cmake  CXXLibrary.cmake  Compiler.cmake  Coverage.cmake  Functions.cmake  Git.cmake  Headers.cmake  I18N.cmake  IMC.cmake  Macros.cmake  MinGW.cmake  OperatingSystem.cmake  Programs.cmake  Subversion.cmake  SystemLibraries.cmake  Tasks.cmake  Toolchain.cmake  Types.cmake  Version.cmake
cmake/Libraries/: ALSA.cmake  BVTSDK.cmake  Blueview.cmake  Boost.cmake  CURL.cmake  Curl.cmake  DC1394.cmake  DCCL.cmake  EPOS.cmake  Exif.cmake  Exiv2.cmake  FTD2XX.cmake  GDAL.cmake  GENIENANO.cmake  JPEG.cmake  MCCUSB.cmake  Modbus.cmake  Mosquitto.cmake  OpenCV.cmake  OpenCV4.cmake  Phidget.cmake  PointGrey.cmake  Qt.cmake  Qt5.cmake  SpiderMonkey.cmake  Swiftnav.cmake  V4L2.cmake  Xeneth.cmake  behaviourtree_cpp.cmake  h5cpp.cmake  uEye.cmake
doc/: EclipseCodeStyle.xml  EmacsCodeStyle.el  License.txt  Workshop20120406.odp
doc/Doxygen/: DevGuide.dox  Doxyfile.in  Layout.xml  Style.css
doc/HoPS/: HoPS.md
doc/manual/: EmergencySMS.tex  Makefile  MotorCurrentFault.tex  ServoCurrentFault.tex  ServoPositionFault.tex  doc.tex
docker/: Dockerfile  docker-compose.yml
etc/: adamastor-lumenera.ini  adamastor.ini  aero-01.ini  alfa-07.ini  amc.ini  apdr-1.ini  ardupilot-testbed.ini  asv-novatel.ini  autonaut-01-aux.ini  autonaut-01.ini  auv1.ini  auv1_drift.ini  auv2.ini  auv2_drift.ini  auv3.ini  auv3_drift.ini  auv4.ini  auv5.ini  base.ini  bridgebox-2.ini  buv-petinga-1.ini  caravel-aux.ini  caravel.ini  caravela-2.ini  caravela-3.ini  caravela.ini  comap-simulator.ini  crawler.ini  cularis-04.ini  datalogger.ini  doam.ini  drift.ini  esp32.ini  gcs.ini  hexa-00.ini  hexa-sitl.ini  lauv-arpao.ini  lauv-atom-testbed.ini  lauv-dolphin-1-doam.ini  lauv-dolphin-1.ini  (+155 more)
etc/asv/: basic.ini  control.ini  general.ini  maneuvers.ini  monitors.ini  navigation.ini  plans.ini  simulator.ini  supervisors.ini  transports.ini
etc/auv/: basic.ini  control.ini  general.ini  maneuvers.ini  monitors.ini  navigation.ini  plans.ini  simulator.ini  supervisors.ini  transports.ini
etc/common/: drip.ini  evologics-addresses.ini  general.ini  gsm-addresses.ini  imc-addresses.ini  iridium-addresses.ini  maneuvers.ini  micromodem-addresses.ini  monitors.ini  narrow-band-transponders.ini  necsave.ini  non-task-sections.ini  plans.ini  pure-pursuit.ini  purepursuit.ini  seatrac-addresses.ini  sensors.ini  swarm-addresses.ini  temperature-rpi.ini  transports.ini  trex.ini  vsim-models.ini  webpage.ini
etc/development/: ad080ge.ini  aim.ini  ais.ini  ardupilot-testbed.ini  blueview.ini  braga.ini  broom.ini  cam-pioneer.ini  datastore.ini  dummy.ini  evologics.ini  evoroma.ini  flybycamera.ini  form.ini  form_fl.ini  form_lead.ini  formation-apm.ini  fred.ini  genesys.ini  gsm.ini  ifog.ini  imagenex881a.ini  iridiumsbd.ini  lauv-nemo-1-DCCL-test.ini  lauv-noptilus-2-DCCL-test.ini  lauv-seacon-1-seatrac.ini  ldns.ini  led4r.ini  limu.ini  linux-pwm.ini  log_receiver.ini  log_sender.ini  log_sender_compressed.ini  luemb.ini  lumenera-offboard.ini  lumeneramaster.ini  lumeneraslave.ini  manta-1-seatrac.ini  manta-usbl.ini  mv-np1.ini  (+39 more)
etc/hardware/: broomv2.ini  flir.ini  lctr-a9xx.ini  lumenera-offboard.ini  parts.ini  power-consumption.ini  radio.ini  sadc.ini  temperature-rpi.ini  wifi-rssi.ini
etc/manta/: basic.ini  devices.ini  general.ini  monitors.ini  supervisors.ini  transports.ini
etc/simulation/: bathymetry-apdl-large.ini  bathymetry-apdl.ini  evo_sim.ini  evologics-simulator.ini  ocTree.ini  salinity-data.ini  temperature-data.ini  uav.ini
etc/test/: tags.ini
etc/testing/: acomms.ini  ais.ini  docking.ini  dvl-calibration.ini  joint-evologics.ini  joint-umodem.ini  piccolo.ini  ptu-d48.ini  ptu.ini  tase.ini  ueye.ini
etc/uav/: ardupilot.ini  basic.ini  cameras.ini  control.ini  dms.ini  formation.ini  handover.ini  maneuvers.ini  monitors.ini  piccolo-addresses.ini  px4_test.ini  satcomms.ini  seatrac.ini  simulation.ini  simulator.ini  supervisors.ini  transports.ini  trex.ini
etc/wmm/: wmm.cof
etc/xml/: IMC.xml
firmware/: broom-firmware-1.0.0.hex  broom-firmware-1.1.0.hex  doam-firmware-1.0.1.hex  mcb-firmware-1.0.1.hex  mcb-firmware-2.0.1.hex  mcb-firmware-2.1.1.hex  mcb-firmware-2.1.2.hex  pctl-firmware-2.3.0.hex  scrt-firmware-2.1.2.hex  scrt-firmware-3.1.0.hex
i18n/: dune.pot  entity_labels.txt
programs/: 83p_to_csv.cpp  activation.cpp  coarse_altitude.cpp  compass_calibration.cpp  ctd_csv.cpp  distance_travelled.cpp  dsctest.cpp  energy_consumed.cpp  evousbl.cpp  filter_log.cpp  fuel_replay.cpp  gps_phototrigger.cpp  lcb-sql.cpp  limu.cpp  novatel_to_csv.cpp  power_compute.cpp  prng.cpp  quadprog.cpp  surface_positions.cpp  testPlan.cpp  test_plan.cpp  test_rows.cpp  usbl_evaluation.cpp  wavy_log.cpp  yoyocalc.cpp
programs/bridges/: bridges-demo.cpp  test-contros.cpp  test-octopus.cpp
programs/generators/: imc_addresses.py  imc_blob.py  imc_code.py  imc_download.py  imc_tests.py  mavlink_msg_names.py  status_codes.py
programs/gsmux/: Fields.def  Filter.hpp  Parser.hpp  Program.cmake  gsmux-tsv.cpp  gsmux.cpp
programs/lcb/: MCI.hpp  Program.cmake  SlaveUART.hpp  SlaveUARTFrame.def  lcb.cpp  lcb.ini
programs/scripts/: acoustic-proxy-test.bash  acoustic-proxy-test.cmds  addsvnkeywords.sh  ckheaders.sh  hrate.sh  (+35 more)
src/Vision/FireMapper/Mapping/: CMakeLists.txt  ElevationRaster.cpp  ElevationRaster.hpp  FireRaster.cpp  FireRaster.hpp  Image.cpp  Image.hpp  Mapping.cpp  Mapping.hpp  SensorModel.cpp  SensorModel.hpp
src/Vision/FireMapper/Mapping/standalone/: csvstream.h  main.cpp
www/: index.html  index.js
(+1912 files in other folders)
